--- a/src/Components/Profile/Student/studentProfile.css
+++ b/src/Components/Profile/Student/studentProfile.css
@@ -1,8 +1,23 @@
-*{
-    padding: 0;
-    margin: 0;
+*{padding: 0;margin: 0;}
+
+.student-profile{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
-.header img{
-    width: 100px;
-    height: 100px;
+.student-profile input{
+    margin-bottom: 10px;
+}
+.student-profile button{
+    font-size: 18px;
+    width: 170px;
+    background-color: #d95b30;
+    color: white;
+    cursor: pointer;
+    border: #ffffff;
+}
+.student-profile button:hover{
+    background-color: #1E90FFFF;
 }
