payment updated in default page

--- a/src/Components/Default/default.css
+++ b/src/Components/Default/default.css
@@ -26,6 +26,7 @@
     width: 200px;
     height: 200px;
     margin:10px 10px 20px 10px;
+    box-sizing: border-box;
 }
 
 #title{
@@ -38,6 +39,35 @@
     line-height: 2;
 
 }
+
+.academic-course img{
+    margin-left: 30%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.payment img{
+    width: 450px;
+    height: 300px;
+}
+.payments-online {
+display: flex;
+    justify-content: space-evenly;
+    margin-top: 15px;
+    /*margin-bottom: 15px;*/
+    background-color: #282c34;
+
+
+    /**/
+}
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 990px) {
