some react-reveal applied

--- a/src/Components/Profile/Teacher/teacherProfile.css
+++ b/src/Components/Profile/Teacher/teacherProfile.css
@@ -3,10 +3,10 @@
 .main-header{
     color: #047f7f;
     text-align: center;
-    /*padding-top: 15px;*/
+    justify-content: center;
+    padding-top: 15px;
     opacity: 70%;
     font-family: 'Inconsolata', monospace;
-
 
 }
 .main-header h2{
