--- a/src/Components/Authentication/Signup/signup.css
+++ b/src/Components/Authentication/Signup/signup.css
@@ -1,13 +1,12 @@
 *{margin: 0; padding:0;}
-.header{
+.header2{
     grid-template-columns: auto auto;
     width: 100%;
+    align-items: center;
     padding-left: 15%;
     padding-right: 15%;
-    justify-content: space-between;
+    justify-content: space-around;
     display: grid;
-    text-align: center;
-    background-color: #ecf0f3;
     color: #6d6d6d;
     font-family: 'Inconsolata', monospace;
 
