--- a/src/Components/ChatHome/chat-app-home.css
+++ b/src/Components/ChatHome/chat-app-home.css
@@ -16,7 +16,8 @@ height: 300px;
     margin-left: 20px;
 }
 .card h1{
-    color: #047f7f;
+    color: red;
+
 }
 .registered-email{
     color: green;
