--- a/src/Components/Profile/Student/studentProfile.css
+++ b/src/Components/Profile/Student/studentProfile.css
@@ -1,16 +1,21 @@
-*{padding: 0;margin: 0;}
+* {
+    padding: 0;
+    margin: 0;
+}
 
-.student-profile{
+.student-profile {
     align-items: center;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
     margin-top: 10px;
 }
-.student-profile input{
+
+.student-profile input {
     margin-bottom: 10px;
 }
-.student-profile button{
+
+.student-profile button {
     font-size: 18px;
     width: 170px;
     background-color: #d95b30;
@@ -18,6 +23,44 @@
     cursor: pointer;
     border: #ffffff;
 }
-.student-profile button:hover{
+
+.student-profile button:hover {
     background-color: #1E90FFFF;
+}
+
+.search-bar {
+    text-align: center;
+    display: flex;
+    margin-left: 40%;
+    align-items: center;
+
+}
+
+.item {
+    font-weight: bolder;
+}
+
+.listItem {
+    margin-bottom: 20px;
+    background-color: #efeded;
+}
+
+#btn-start-chat {
+    background-color: #007bff;
+    color: whitesmoke;
+}
+
+@media (max-width: 768px) {
+    .header p {
+        margin-right: 30px;
+        margin-top: 15px;
+        font-size: 15px;
+    }
+
+    .search-bar {
+        align-items: center;
+        margin: 10px auto 10px auto;
+        display: block;
+    }
+
 }
