--- a/src/Components/Authentication/Signup/signup.css
+++ b/src/Components/Authentication/Signup/signup.css
@@ -3,8 +3,8 @@
     grid-template-columns: auto auto;
     width: 100%;
     align-items: center;
-    padding-left: 15%;
-    padding-right: 15%;
+    /*padding-left: 15%;*/
+    /*padding-right: 15%;*/
     justify-content: space-around;
     display: grid;
     color: #6d6d6d;
@@ -51,4 +51,35 @@
 .signup-area a:hover{
     color: #1E90FFFF;
 
+}
+
+@media (max-width: 990px) {
+    .header2 h1 {
+        font-size: 30px;
+
+    }
+}
+    @media (max-width: 990px) {
+        .header2 h1 {
+            font-size: 22px;
+        }
+    }
+@media (max-width: 576px) {
+    .header2 {
+       display: flex;
+        flex-direction:column ;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    .header2 h1{
+        font-size: 18px;
+        margin-top: 20px;
+        text-align: center;
+    }
+}
+@media (max-width: 310px) {
+    .header2 h1{
+        width: 50%;
+        text-align: center;
+    }
 }
